--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>in.ashokit</groupId>
-  <artifactId>01-maven-web-app</artifactId>
+  <groupId>com.git</groupId>
+  <artifactId>01-maven-webapp</artifactId>
   <packaging>war</packaging>
   <version>3.0-RELEASE</version>
-  <name>01-maven-web-app</name>
+  <name>01-maven-webapp</name>
   <url>http://maven.apache.org</url>
  
   <dependencies>
@@ -17,7 +17,7 @@
    
   </dependencies>
   <build>
-    <finalName>maven-web-app</finalName>
+    <finalName>maven-webapp</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -27,3 +27,4 @@
     </plugins>
   </build>
 </project>
+
