--- a/k8s-deploy.yml
+++ b/k8s-deploy.yml
@@ -18,7 +18,7 @@ spec:
   spec: 
     containers:
     - name: mavenwebappcontainer
-      image: musabsyed/maven-webapp
+      image: musabsyed/mavenwebapp
       imagePullPolicy: Always
       ports:
       - containerPort: 8080
@@ -35,5 +35,6 @@ spec:
    - port: 80
      targetPort: 8080
 ...
+
 
 
